--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -318,6 +318,9 @@ markdown_extensions:
     - pymdownx.snippets:
           base_path: docs
     - attr_list
+    - pymdownx.emoji:
+        emoji_index: !!python/name:materialx.emoji.twemoji
+        emoji_generator: !!python/name:materialx.emoji.to_svg
 plugins:
     - search
     - markdownextradata: {}
