--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -190,9 +190,9 @@ nav:
     #    - Helm Catalog: catalogs/config-catalog.md
     - Setup: 
         - Prerequisites: setup/prerequisites.md
+        - Install: setup/install.md
         - Migration: setup/migration.md
         - Organization: setup/organizations.md
-       #- Install: setup/install.md
        #- Deploy:
        #    - Deployment Patterns: get-started/dummy.md
        #    - All-in-one: get-started/dummy.md
