--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -220,7 +220,7 @@ nav:
             - Non-production: setup/identity-platform/idp/non-production-idp.md
             - Asgardeo: setup/identity-platform/idp/asgardeo-idp.md
             - Auth0: setup/identity-platform/idp/auth0-idp.md
-            - Any Third-party IdP: setup/identity-platform/idp/third-party-idp.md
+            - Any third-party IdP: setup/identity-platform/idp/third-party-idp.md
         - Configure Analytics: 
             - Choreo Insights: setup/analytics/configure-analytics-for-choreo-insights.md
             - ELK Stack: setup/analytics/configure-analytics-for-elk-stack.md
