--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -234,6 +234,7 @@ nav:
         - Configure Distributed Tracing: administration/distributed-tracing.md
         - Deploy in OpenShift: setup/deploy-in-openshift.md
         - Production Deployment guidelines: administration/production-deployment-guideline.md
+        - Deployment patterns: administration/deployment-patterns.md
     - About APK:
         - What is APK?: about-apk/what-is-apk.md
         - About This Release: about-apk/about-this-release.md
