--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -241,7 +241,6 @@ nav:
             - Overview: about-apk/performance-test-results/overview.md
             - Gateway router with one CPU: about-apk/performance-test-results/gateway-router-with-one-cpu.md
             - Gateway router with two CPUs: about-apk/performance-test-results/gateway-router-with-two-cpus.md
-        - FAQs: about-apk/FAQs.md
        #- Key Concepts:
        #    - Key Concept 1: about-apk/key-concepts/key-concept.md
        #    - Key Concept 2: about-apk/key-concepts/key-concept.md
@@ -288,6 +287,8 @@ nav:
         #- Report Bugs: get-started/dummy.md # Brief description and links to Git links for doc issues and product issues
         - Training and Certification: https://wso2.com/training/
         - Resources: https://wso2.com/library/
+    - FAQ:
+        - FAQs: about-apk/FAQs.md
 
 # Extensions
 markdown_extensions:
