--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -171,7 +171,16 @@ nav:
             - APK Data plane: control-plane/apk-deploy.md
             - APIM APK Agent: control-plane/apim-apk-agent-deploy.md
         - API Management: 
-            - Develop and Deploy API: control-plane/control-plane-operations.md
+            - Overview: control-plane/api-management/control-plane-operations.md
+            - Develop and Deploy API:
+                - Create and Deploy APIs: control-plane/api-management/control-plane-create-and-deploy-apis.md
+                - Manage Endpoints: control-plane/api-management/control-plane-manage-endpoints.md
+                - API Policies:
+                    - Overview: control-plane/api-management/control-plane-api-policies.md
+                    - Interceptor Service: control-plane/api-management/control-plane-interceptor-service.md
+                    - CORS: control-plane/api-management/control-plane-cors.md
+            - Add APK Gateway: control-plane/api-management/control-plane-add-apk-gateway.md
+            - Create Application and Subscribe: control-plane/api-management/control-plane-create-application-and-subscription.md
         - Security: control-plane/control-plane-security.md
         - Troubleshooting: control-plane/control-plane-troubleshooting.md
     - Catalogs:
