--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -187,11 +187,12 @@ nav:
         - CRD Catalog: 
             - Overview - CRD Catalog: catalogs/kubernetes-crds.md
             - API: catalogs/crds/api_types.md
+            - APIPolicy: catalogs/crds/apipolicy_types.md
             - HTTPRoute: catalogs/samples/http-route.md
+            - GraphQL Route: catalogs/crds/gql_routes_types.md
             - Authentication: catalogs/crds/authentication_types.md
             - Backend: catalogs/crds/backend_types.md
             - BackendJWT: catalogs/crds/backendjwt_types.md
-            - APIPolicy: catalogs/crds/apipolicy_types.md
             - Interceptor Service: catalogs/crds/interceptorservice_types.md
                 # - Overview: catalogs/api-policy.md
                 # - CORS: catalogs/cors.md
@@ -200,6 +201,9 @@ nav:
             # - Resolved JWT Issuer: catalogs/crds/resolvedJWTIssuer.md
             - Scope: catalogs/crds/scope_types.md
             - Token Issuer: catalogs/crds/tokenIssuer_types.md
+            - Subscription: catalogs/crds/subscription_types.md
+            - Application: catalogs/crds/application_types.md
+            - Application Mapping: catalogs/crds/application_mapping_types.md
                 # - Overview: catalogs/rate-limit-policy.md
                 # - API Level: catalogs/ratelimit-api.md
                 # - Resource Level: catalogs/ratelimit-resource.md
