--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -15,18 +15,18 @@
 # under the License.
 
 # Project information
-site_name: WSO2 API Manager Documentation
-site_description: Documentation for WSO2 API Manager
+site_name: WSO2 APK Documentation
+site_description: Documentation for WSO2 APK
 site_author: WSO2
-site_url: https://wso2.com/
+site_url: https://apk.docs.wso2.com
 
 # Repository
-repo_name: wso2/docs-apim
-repo_url: https://github.com/wso2/docs-apim
-edit_uri: https://github.com/wso2/docs-apim/edit/master/en/docs/
+repo_name: wso2/docs-apk
+repo_url: https://github.com/wso2/docs-apk
+edit_uri: https://github.com/wso2/docs-apk/edit/1.1.0/en/docs/
 
 # Copyright
-copyright: WSO2 API Manager - Documentation
+copyright: Documentation for WSO2 APK
 
 # Configuration
 theme: material
