--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -408,7 +408,7 @@ extra:
           link: https://twitter.com/wso2
         - type: linkedin
           link: https://www.linkedin.com/company/wso2
-    site_version: 1.1.0
+    site_version: 1.1.0-dev
     # base_path: http://localhost:8000
     base_path: https://apk.docs.wso2.com
     envoy_path: https://www.envoyproxy.io/docs/envoy/v1.20.0
